--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
         "@types/node": "^16.18.86",
         "@types/react": "^18.2.61",
         "@types/react-dom": "^18.2.19",
-        "@types/react-router-dom": "^5.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.22.2",
+        "react-icons": "^5.0.1",
+        "react-redux": "^9.1.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
@@ -47,6 +47,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "3.2.5",
+        "react-router-dom": "^6.22.2",
         "tailwindcss": "^3.4.1"
     }
 }
